--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="EnableTorus_xDai.js"></script>
 </head>
 <body>
-    <h1>TorusWithMatic</h1>
+    <h1>Torus_xDai</h1>
 	<p>対応ブラウザ：chrome + torus</p>
 </body>
 </html>
