--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@toruslabs/torus-embed"></script>
     <title>Torus_xDai</title>
     <script src="https://cdn.jsdelivr.net/npm/web3@1.2.7/dist/web3.min.js" integrity="sha256-9rSwSMn4GDjf9FcHmJSvdiKGrk+mNIUmM4ltFDu3MUU=" crossorigin="anonymous"></script>
+    <script src="abi.js"></script>    
     <script src="EnableTorus_xDai.js"></script>
 </head>
 <body>
